--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -65,6 +65,11 @@ table.table{
             vertical-align: middle;
             
             .btn{
+                &:active{
+                    border: 1px solid var(--backround-color);
+                    box-shadow: inset 0 0 0 0.1rem var(--backround-color);
+                }
+
                 svg{
                     vertical-align: middle;
                 }
@@ -95,9 +100,12 @@ table.table{
                     }
                 }  
             }    
-            // .btn:hover{
-            //     filter: invert(50%);
-            // }
+            path {
+                stroke: #000000;
+                stroke-width: 1px;
+                stroke-dasharray: 2,2;
+                stroke-linejoin: round;
+              }
 
 
             input{
@@ -149,16 +157,26 @@ table.table{
         height: 2em;
         color: var(--bs-danger);
     }
-    .fa-star{
-        // NOT WORKING ATM 
+    .fa-star {
+        position: relative;
+        display: inline-block;
         height: 2em;
-        color: transparent;
-        background: radial-gradient(circle, rgba(254,219,55,1) 0%, rgba(138,110,47,1) 100%);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
-        background-clip: text;
-        
-    }
+      }
+  
+      .fa-star {
+        height: 2em;
+        color: var(--bs-warning);
+        animation-name: sparkle;
+        animation-duration: 1s;
+        animation-timing-function: linear;
+        animation-delay: 0s;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      @keyframes sparkle {
+        from { opacity: 1; transform: scale(1); }
+        to { opacity: 0.8; transform: scale(1.2); }
+      }
     
     
 }
