--- a/templates/umfrage/index.html.twig
+++ b/templates/umfrage/index.html.twig
@@ -142,7 +142,7 @@
                         <td class="text-center">
                             <div class="summary p-3 mb-1 justify-content-center">
                                 <div>
-                                <i class="fa-solid fa-square-check"></i> <span>:&nbsp{{date.yes}}</span>  {% if date.stared is same as(1) %}<i class="fa-solid fa-star" style="opacity: 0.5"></i>{% endif %}
+                                <i class="fa-solid fa-square-check"></i> <span>:&nbsp{{date.yes}}</span>  {% if date.stared is same as(1) %}<i id="starIcon" class="fa-solid fa-star"></i>{% endif %}
                                 </div>
                                 <div>
                                <i class="fa-solid fa-circle-question"></i> <span>:&nbsp{{date.maybe}}</span>
