--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -177,6 +177,7 @@ table.table{
         from { opacity: 1; transform: scale(1); }
         to { opacity: 0.8; transform: scale(1.2); }
       }
+      //
     
     
 }
