add login reflection in views

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,8 @@
                 <h1>Puudel Project 🐩</h1>
                 <a href="{{ path('app_home')}}">Home</a>
                 <a href="{{ path('app_about')}}">About</a>
-                <a href="#">Login</a>
-                <a href="#">Logout</a>
+                <a href="{{ path('app_login')}}">Login</a>
+                <a href="{{ path('app_logout')}}">Logout</a>
                 <a href="#">Contact</a>
                 <a href="#">Language</a>
                 <a href="#"></a>
