--- a/templates/create/index.html.twig
+++ b/templates/create/index.html.twig
@@ -20,6 +20,7 @@
             {{ form_row(form.email) }}
             {{ form_row(form.title) }}
             {{ form_row(form.description) }}   
+            {{ form_row(form.private) }}   
               
             <h3>Termine</h3>        
             <div class="flex-row">
