--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -21,6 +21,9 @@
 }
 
 header{
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: var(--backround-color);
     color: #e3e3e3;
     font-family: 'Montserrat', sans-serif;
@@ -33,8 +36,11 @@ header{
     nav {
         background-color: #333;
         overflow: hidden;
-        margin: 1em 0 ;
+        margin: 1em 0 0 0 ;
         padding: 0.5em;
+        -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+        -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+        box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
     }
     nav a {
         text-align: center;
@@ -53,7 +59,12 @@ body {
     background-color: var(--backround-color);
     color: #e3e3e3;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    font-weight: 400;
+    .container-fluid{
+        margin-top: 100px;
+        padding-bottom: 10px;
+        margin-bottom: 60px;
+    }
 }
 
 .author-box{
@@ -77,6 +88,7 @@ body {
     }
 }
 table.table{
+    font-weight: 700;
     color:  #e3e3e3;
     vertical-align: middle;
 
@@ -170,11 +182,11 @@ table.table{
             color:  #161616;
         }
     }
-    .fa-question-square{
-        //  background-image: url('../assets/icons/my-icon.svg');
-        height: 2em;
-        color: var(--bs-warning);
-    }
+    // .fa-question-square{
+    //     background-image: url('../images/question-square.svg');
+    //     height: 2em;
+    //     color: var(--bs-warning);
+    // }
     .fa-floppy-disk{
         height: 1.3em;
         color: var(--bs-primary);
