--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -87,6 +87,62 @@ body {
         font-size: 2rem;
     }
 }
+.btn{
+    box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.3);
+}
+.copy-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .copy-textfield {
+    position: relative;
+    display: inline-flex;
+    background-color: #e3e3e3;
+    border: 1px solid --backround-color;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+    box-shadow: inset 3px 3px 15px 3px rgba(0,0,0,0.3);
+    flex: 1;
+  }
+  
+  .copy-text {
+    flex-grow: 1;
+    font-size: small;
+    color: var(--backround-color);
+  }
+  
+  .copy-btn {
+    background-color: #e3e3e3;
+    color: var(--bs-secondary);
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 0px 10px 10px 0px;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+  }
+  
+  .copy-btn i {
+    margin-right: 5px;
+    font-size: 16px;
+  }
+  
+  /* Hover state */
+  .copy-btn:hover {
+    background-color: #0062cc;
+  }
+  
 table.table{
     font-weight: 700;
     color:  #e3e3e3;
