fix styles and add a clipboardcopy

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -49,7 +49,7 @@
                             <td>
                                 <div class="copy-container">
                                     <div class="copy-textfield">
-                                        <span class="copy-text">{{app.request.getUri()}}{{umfrage.urlHash}}</span>
+                                        <span class="copy-text">{{app.request.getUri()}}umfrage/{{umfrage.urlHash}}</span>
                                         <button class="copy-btn" data-clipboard-target=".copy-text">
                                         <i class="fas fa-copy"></i>
                                         </button>
@@ -113,7 +113,7 @@
                         <td>
                             <div class="copy-container">
                                 <div class="copy-textfield">
-                                    <span class="copy-text">{{app.request.getUri()}}{{umfrage.urlHash}}</span>
+                                    <span class="copy-text">{{app.request.getUri()}}umfrage/{{umfrage.urlHash}}</span>
                                     <button class="copy-btn" data-clipboard-target=".copy-text">
                                     <i class="fas fa-copy"></i>
                                     </button>
