--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -28,31 +28,45 @@ header{
     color: #e3e3e3;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    h1{
-        display: inline-block;
-        font-size: 2rem;
-        vertical-align:middle;
-    }
+    vertical-align:middle;
+
     nav {
+        h1{
+            display: inline-block;
+            font-size: 2rem;
+        }
         background-color: #333;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
         overflow: hidden;
         margin: 1em 0 0 0 ;
         padding: 0.5em;
         -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
         -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
         box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
-    }
-    nav a {
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-    nav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-    
+                
+        .left-nav {
+            text-align: left;
+        }
+        
+        .right-nav {
+            text-align: right;
+        }
+        a {
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+            border-radius: 5%;
+        }
+        a:hover {
+            background-color: #ddd;
+            color: black;
+            border-radius: 5%;
+            box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.3);
+        }
+    }    
 }
 
 body {
@@ -64,6 +78,9 @@ body {
         margin-top: 100px;
         padding-bottom: 10px;
         margin-bottom: 60px;
+    }
+    .btn{
+        box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.3);
     }
 }
 
@@ -87,79 +104,69 @@ body {
         font-size: 2rem;
     }
 }
-.btn{
-    box-shadow: inset 0px 0px 10px 3px rgba(0,0,0,0.3);
-}
+
 .copy-container {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-  }
-  
-  .copy-textfield {
-    position: relative;
-    display: inline-flex;
-    background-color: #e3e3e3;
-    border: 1px solid --backround-color;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 16px;
-    box-shadow: inset 3px 3px 15px 3px rgba(0,0,0,0.3);
-    flex: 1;
-  }
-  
-  .copy-text {
-    flex-grow: 1;
-    font-size: small;
-    color: var(--backround-color);
-  }
-  
-  .copy-btn {
-    background-color: #e3e3e3;
-    color: var(--bs-secondary);
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 0px 10px 10px 0px;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-  }
-  
-  .copy-btn i {
-    margin-right: 5px;
-    font-size: 16px;
-  }
-  
-  /* Hover state */
-  .copy-btn:hover {
-    background-color: #0062cc;
-  }
-  
-table.table{
+    
+    .copy-textfield {
+        position: relative;
+        display: inline-flex;
+        background-color: #e3e3e3;
+        border: 1px solid --backround-color;
+        border-radius: 10px;
+        padding: 10px;
+        font-size: 16px;
+        box-shadow: inset 3px 3px 15px 3px rgba(0,0,0,0.3);
+        flex: 1;
+        .copy-text {
+          flex-grow: 1;
+          font-size: small;
+          color: var(--backround-color);
+        }
+        .copy-btn {
+          background-color: #e3e3e3;
+          color: var(--bs-secondary);
+          border: none;
+          padding: 10px;
+          cursor: pointer;
+          border-radius: 0px 10px 10px 0px;
+          position: absolute;
+          top: 50%;
+          right: 0;
+          transform: translateY(-50%);
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 40px;
+          .copy-btn i {
+            margin-right: 5px;
+            font-size: 16px;
+          }
+          /* Hover state */
+          .copy-btn:hover {
+            background-color: #0062cc;
+          }
+        }
+    }
+}
+table.table{ // to override BS classes
     font-weight: 700;
     color:  #e3e3e3;
-    vertical-align: middle;
-
+    td, tr{
+        box-shadow: inset 0px 0px 3px 1px rgba(255, 255, 255, 0.1);
+    }
     .table-termine{
         background-color: #ffffff23 !important; 
-    }
-    form{
-        vertical-align: middle;
     }
     .user-input-row{
         background-color: #080c3f;
 
         .answer-input-cell{
             text-align: center;
-            vertical-align: middle;
             
             .btn{
                 &:active{
@@ -278,6 +285,12 @@ table.table{
         from { opacity: 1; transform: scale(1); }
         to { opacity: 0.8; transform: scale(1.2); }
     } 
+}
+.back{
+   
+        --bs-gutter-x: 1.5rem;
+        margin-left:  calc(8.33333333% + (-0.5 * var(--bs-gutter-x)));
+    
 }
 footer {
     position: fixed;
