--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,33 +17,37 @@
         {% block header %}
         <header>
             <nav>
-                <h1>Puudel Project 🐩</h1>
-                <a href="{{ path('app_home')}}">Home</a>
-                <a href="{{ path('app_about')}}">About</a>
-                <a href="{{ path('app_login')}}">Login</a>
-                <a href="{{ path('app_logout')}}">Logout</a>
-                <a href="#">Contact</a>
-                <a href="#">Language</a>
-                <a href="#"></a>
-                
+                <div class="left-nav">
+                    <h1>Puudel Project 🐩</h1>
+                    <a href="{{ path('app_home')}}">Home</a>
+                    <a href="{{ path('app_about')}}">About</a>
+
+                    <a href="#">Contact</a>
+                </div>
+                <div class="right-nav">
+                    <a href="#">
+                        <i class="fa-solid fa-earth-americas"></i>
+                    </a>
+                    {% if app.user %}
+                    <a href="{{ path('app_logout')}}">Logout</a>
+                    {% else %}
+                    <a href="{{ path('app_register')}}">Register</a>
+                    <a href="{{ path('app_login')}}">Login</a>
+                    {% endif %}
+
+                </div>
             </nav>
         </header>
-
-
-
-
         {% endblock %}
         
         {% if app.session.flashbag.has('error') %}
             {% set lastError = app.session.flashbag.get('error')|last %}
             <div class="alert alert-danger">{{ lastError }}</div>
         {% endif %}
-     {# create a navbar here #}
-
 
         {% block body %}
-           
         {% endblock %}
+        
         {% block footer %}
         <footer>
 	        <div class="container">
