--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-4 offset-2">
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
@@ -12,6 +14,11 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-lg btn-primary">Register</button>
     {{ form_end(registrationForm) }}
+
+        </div>  
+    </div>
+</div>
+
 {% endblock %}
