--- a/assets/icomoon/style.css
+++ b/assets/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'PuudelFont';
-  src:  url('fonts/PuudelFont.eot?r7z3up');
-  src:  url('fonts/PuudelFont.eot?r7z3up#iefix') format('embedded-opentype'),
-    url('fonts/PuudelFont.ttf?r7z3up') format('truetype'),
-    url('fonts/PuudelFont.woff?r7z3up') format('woff'),
-    url('fonts/PuudelFont.svg?r7z3up#PuudelFont') format('svg');
+  src:  url('fonts/PuudelFont.eot?2o8460');
+  src:  url('fonts/PuudelFont.eot?2o8460#iefix') format('embedded-opentype'),
+    url('fonts/PuudelFont.ttf?2o8460') format('truetype'),
+    url('fonts/PuudelFont.woff?2o8460') format('woff'),
+    url('fonts/PuudelFont.svg?2o8460#PuudelFont') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,8 +25,38 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-spinner:before {
+  content: "\e97a";
+}
+.icon-earth:before {
+  content: "\e9ca";
+}
+.icon-info:before {
+  content: "\ea0c";
+}
+.icon-arrow-left2:before {
+  content: "\ea40";
+}
 .icon-question:before {
   content: "\f128";
+}
+.icon-search:before {
+  content: "\f002";
+}
+.icon-envelope-o:before {
+  content: "\f003";
+}
+.icon-heart:before {
+  content: "\f004";
+}
+.icon-star:before {
+  content: "\f005";
+}
+.icon-star-o:before {
+  content: "\f006";
+}
+.icon-user:before {
+  content: "\f007";
 }
 .icon-check:before {
   content: "\f00c";
@@ -39,4 +69,157 @@ i {
 }
 .icon-times:before {
   content: "\f00d";
+}
+.icon-power-off:before {
+  content: "\f011";
+}
+.icon-cog:before {
+  content: "\f013";
+}
+.icon-gear:before {
+  content: "\f013";
+}
+.icon-trash-o:before {
+  content: "\f014";
+}
+.icon-home:before {
+  content: "\f015";
+}
+.icon-inbox:before {
+  content: "\f01c";
+}
+.icon-refresh:before {
+  content: "\f021";
+}
+.icon-lock:before {
+  content: "\f023";
+}
+.icon-pencil:before {
+  content: "\f040";
+}
+.icon-leaf:before {
+  content: "\f06c";
+}
+.icon-twitter-square:before {
+  content: "\f081";
+}
+.icon-facebook-square:before {
+  content: "\f082";
+}
+.icon-cogs:before {
+  content: "\f085";
+}
+.icon-gears:before {
+  content: "\f085";
+}
+.icon-sign-in:before {
+  content: "\f090";
+}
+.icon-phone:before {
+  content: "\f095";
+}
+.icon-unlock:before {
+  content: "\f09c";
+}
+.icon-bell-o:before {
+  content: "\f0a2";
+}
+.icon-floppy-o:before {
+  content: "\f0c7";
+}
+.icon-save:before {
+  content: "\f0c7";
+}
+.icon-envelope:before {
+  content: "\f0e0";
+}
+.icon-cloud-download:before {
+  content: "\f0ed";
+}
+.icon-quote-left:before {
+  content: "\f10d";
+}
+.icon-quote-right:before {
+  content: "\f10e";
+}
+.icon-circle:before {
+  content: "\f111";
+}
+.icon-unlock-alt:before {
+  content: "\f13e";
+}
+.icon-play-circle:before {
+  content: "\f144";
+}
+.icon-file:before {
+  content: "\f15b";
+}
+.icon-youtube:before {
+  content: "\f167";
+}
+.icon-instagram:before {
+  content: "\f16d";
+}
+.icon-paw:before {
+  content: "\f1b0";
+}
+.icon-tree:before {
+  content: "\f1bb";
+}
+.icon-paper-plane-o:before {
+  content: "\f1d9";
+}
+.icon-send-o:before {
+  content: "\f1d9";
+}
+.icon-sliders:before {
+  content: "\f1de";
+}
+.icon-futbol-o:before {
+  content: "\f1e3";
+}
+.icon-soccer-ball-o:before {
+  content: "\f1e3";
+}
+.icon-bell-slash-o:before {
+  content: "\f1f7";
+}
+.icon-trash:before {
+  content: "\f1f8";
+}
+.icon-toggle-off:before {
+  content: "\f204";
+}
+.icon-toggle-on:before {
+  content: "\f205";
+}
+.icon-commenting-o:before {
+  content: "\f27b";
+}
+.icon-pause-circle:before {
+  content: "\f28b";
+}
+.icon-snapchat-square:before {
+  content: "\f2ad";
+}
+.icon-user-circle:before {
+  content: "\f2bd";
+}
+.icon-user-circle-o:before {
+  content: "\f2be";
+}
+.icon-window-maximize:before {
+  content: "\f2d0";
+}
+.icon-window-minimize:before {
+  content: "\f2d1";
+}
+.icon-window-restore:before {
+  content: "\f2d2";
+}
+.icon-times-rectangle:before {
+  content: "\f2d3";
+}
+.icon-window-close:before {
+  content: "\f2d3";
 }
