--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -166,10 +166,6 @@ table.table{
                     border: 1px solid var(--backround-color);
                     box-shadow: inset 0 0 0 0.1rem var(--backround-color);
                 }
-
-                svg{
-                    vertical-align: middle;
-                }
             }
 
             
@@ -247,15 +243,15 @@ table.table{
         height: 1.3em;
         color: var(--bs-primary);
     }
-    .fa-square-check{
+    .icon-check{
         height: 2em;
         color: var(--bs-success);
     }
-    .fa-circle-question{
+    .icon-question{
         height: 2em;
         color: var(--bs-warning);
     }
-    .fa-square-xmark{
+    .icon-close{
         height: 2em;
         color: var(--bs-danger);
     }
