--- a/templates/umfrage/index.html.twig
+++ b/templates/umfrage/index.html.twig
@@ -96,11 +96,11 @@
                         {% for date in termin  %}
                         <td class="text-center">
                             {% if date.answer == 'yes' %}
-                            <i class="fa-solid fa-square-check"></i>
+                            <i class="icon-check"></i>
                             {% elseif date.answer == 'maybe' %}
-                                <i class="fa-solid fa-circle-question"></i>
+                                <i class="icon-question" ></i>
                             {% else %}
-                               <i class="fa-solid fa-square-xmark"></i>
+                               <i class="icon-close"></i>
                             {% endif %}
                         </td>
                         {% endfor %}
@@ -130,11 +130,11 @@
                                         {{ form_widget(answer, {'attr': {'class': 'btn-check'}}) }}
                                         <label class="btn" for="{{ answer.vars.id }}">
                                             {% if answer.vars.value == 'yes' %}
-                                                <i class="fa-solid fa-square-check"></i>
+                                                 <i class="icon-check"></i>
                                             {% elseif answer.vars.value == 'maybe' %}
-                                                <i class="fa-solid fa-circle-question"></i>
+                                                <i class="icon-question" ></i>
                                              {% elseif answer.vars.value == 'no' %}
-                                                <i class="fa-solid fa-square-xmark"></i>
+                                                <i class="icon-close"></i>
                                             {% endif %}
 
                                         </label>
@@ -151,16 +151,16 @@
                         <td class="text-center">
                             <div class="summary p-3 mb-1 justify-content-center">
                                     <div>
-                                        <i class="fa-solid fa-square-check"></i> <span>:&nbsp{{date.yes}}</span>  
+                                        <i class="icon-check"></i> <span>:&nbsp{{date.yes}}</span>  
                                         {% if date.stared is same as(1) %}
                                             <i id="starIcon" class="fa-solid fa-star"></i>
                                         {% endif %}
                                     </div>
                                     <div>
-                                         <i class="fa-solid fa-circle-question"></i> <span>:&nbsp{{date.maybe}}</span>
+                                         <i class="icon-question"></i> <span>:&nbsp{{date.maybe}}</span>
                                     </div>
                                     <div>
-                                        <i class="fa-solid fa-square-xmark"></i> <span>:&nbsp{{date.no}}</span>
+                                        <i class="icon-close"></i><span>:&nbsp{{date.no}}</span>
                                     </div>
                             </div>
                         </td>
