--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -57,7 +57,7 @@ header{
         a {
             padding: 14px 16px;
             text-decoration: none;
-            font-size: 17px;
+            font-size: 20px;
             border-radius: 5%;
         }
         a:hover {
@@ -108,9 +108,13 @@ body {
         width: 100%;
         font-weight: 700;
         color:  #e3e3e3;
-         
-        td, tr{
+        border-bottom: none;
+        td, th, tr{
+            &.desc{
+                width: 20%;
+            }
             box-shadow: inset 0px 0px 3px 1px rgba(255, 255, 255, 0.1);
+            border-bottom: none;
         }
         &.icons{
             max-width: 80%;
@@ -123,8 +127,6 @@ body {
                 width: 40%;
             }
         }
-
-
         .table-termine{
             background-color: #ffffff23 !important; 
         }
@@ -285,7 +287,6 @@ i{
     --bs-btn-padding-x: 0.75rem;
     --bs-btn-padding-y: 0.375rem;
     line-height: 1;
-    height: 100%;
     font-size: 20px;
     &.save-btn{
         background-color: var(--backround-color);
