--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,39 @@
         <title>{% block title %}Puudel!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link rel="stylesheet" href="{{ asset('build/icomoon/style.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/cookieconsent/cookieconsent-css.css') }}" />
+        <script src="{{ asset('build/cookieconsent/cookieconsent.js') }}"></script>
 
+        <script>
+            window.addEventListener("load", function(){
+                window.cookieconsent.initialise({
+                    "palette": {
+                        "popup": {
+                            "background": "#666666",
+                            "text": "#e3e3e3"
+                        },
+                        "highlight" : {
+                            "background": '#f8e71c', 
+                            "border": '#f8e71c', 
+                            "text": '#000000'},
+                        "button": {
+                            "background": "#4b81e8",
+                            "text": "#ffffff"
+                        }
+                    },
+                    "theme": "classic",
+                    "position": "bottom-right",
+                    "type": "opt-out",
+                    "content": {
+                        "message": "This website uses a 🍪 to ensure, we get your timezone and you get the best experience on our website.",
+                        "allow": "Your only option",
+                        "deny": "not an option",
+                        "link": "There is no link to 'Learn more'",
+                        "href": "/about"
+                    }
+                });
+            });
+        </script>
 
 
         
@@ -16,6 +48,7 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+             {{ encore_entry_script_tags('timezone') }}
         {% endblock %}
     </head>
     <body>
@@ -24,7 +57,7 @@
             <nav>
                 <div class="left-nav">
                     <h1>Puudel Project 🐩</h1>
-                    <a href="{{ path('app_home')}}">Home</a>
+                    <a href="{{ path('app_home')}}"><i class="icon-home"></i></a>
                     <a href="{{ path('app_about')}}">About</a>
                     <a href="{{ path('app_icon')}}">icon-list</a>
 
@@ -32,7 +65,7 @@
                 </div>
                 <div class="right-nav">
                     <a href="#">
-                        <i class="fa-solid fa-earth-americas"></i>
+                        <i class="icon-earth"></i>
                     </a>
                     {% if app.user %}
                     <a href="{{ path('app_logout')}}">Logout</a>
