--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,7 @@
             {% else %}
                 <h1>Willkommen, {{ app.user.email }}</h1>
             {% endif %}
+        <div>{{dump(testvar2)}}</div>
             <h2>Deine Umfragen:</h2>
             
             <table class="table">
